bug fix for ghost floating attribution, cropping card on landscape view on mobile device,evi, and collapsing top and bottom margin of card

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -1,4 +1,5 @@
 .card{
+    margin: 50px 0 50px 0;
     width: 90%;
     height: 33.875rem;
     max-width: 20.375rem;
@@ -9,7 +10,7 @@
     overflow: hidden;
     
     //remove this
-    margin-top: 62px;
+    // margin: 100px 0 50px 0;
 
     padding: 1.5rem;
 
